# 3-python-package-team_zenith

./: .gitignore  Pipfile  Pipfile 2  README.md  pyproject 2.toml  pyproject.toml
.github/workflows/: build.yaml  python-package.yml  release.yaml
src/data/: horror_stories.csv
src/pylloween/: __init__.py  __main__.py  bat.py  drawGhost.py  draw_rand.py  drawings.py  ghost.py  ghosts.py  horrors.py  main.py  pumpkin.py  treats.py
tests/: test_draw.py  test_draw_ghost.py  test_ghost.py  test_ghost_say.py  test_ghosts.py  test_horrors.py  test_pumpkin.py  test_speak.py  test_stories.py  test_treats.py
